[B][COLOR gold]v2.0.5[/COLOR][/B]
- Trailers: for now user's youtube add-on's api key will be used (provided one was deleted)
    ie trailers will only work if user has an already working youtube add-on
- Hopefully fixed r-d cache check failing if r-d token had expired

[B][COLOR gold]v2.0.4[/COLOR][/B]
- Fix: prevent torrents resolved by services other than R-D to be checked/marked,
    if services other than R-D are also enabled

[B][COLOR gold]v2.0.3[/COLOR][/B]
- Debrid cache check updates

[B][COLOR gold]v2.0.0[/COLOR][/B]
- Added Real-Debrid torrents cache check
    *Expiremental. Most code adjusted from Fen add-on - many thanks
- Added option to remove metadata from directory source list, for faster loading

[B][COLOR gold]v1.9.32[/COLOR][/B]
- Fixed Clean Settings File function for Kodi versions older than 18 (thx Tikipeter!)
- More code cleanup (Note: re-set your "Max Quality" setting - 1440p option has been removed)
- Orionoid tweaks

[B][COLOR gold]v1.9.31[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v1.9.29[/COLOR][/B]
- Attempt to fix various issues with TV Shows

[B][COLOR gold]v1.9.28[/COLOR][/B]
- Moved CAM/SCR results at the bottom of the source list
- Added option to disable Cloudflare-enabled sites scraping
    *greatly improves scraping time, at the cost of some (well, many...) sources

[B][COLOR gold]v1.9.27[/COLOR][/B]
- TV Shows/tvdb fix - thx 123Venom!
- Various other code updates

[B][COLOR gold]v1.9.26[/COLOR][/B]
- Settings fix

[B][COLOR gold]v1.9.25[/COLOR][/B]
- Minor code updates

[B][COLOR gold]v1.9.24[/COLOR][/B]
- Trigger 'Clean settings file' function on add-on startup after update, to fix issue with scraping

[B][COLOR gold]v1.9.23[/COLOR][/B]
- Fixed episodes order when 'Flatten seasons' is enabled
- Appended relevant icon (imdb/trakt) on user lists & sorted them by site/name

[B][COLOR gold]v1.9.22[/COLOR][/B]
- Added IMDb watchlist/user lists sorting options
- Added support for more content types for IMDb watchlist/user lists
